CIRC-1147: Drools 7.53.0.Final, xstream 1.4.16 (CVE-2021-21342, CVE-2021-21345)
Update Drools from 7.0.0.Final to 7.53.0.Final.

The new Drools version updates xstream to 1.4.16 fixing these vulnerabilies:

* XStream is vulnerable to a Remote Command Execution attack: https://nvd.nist.gov/vuln/detail/CVE-2021-21345
* A Server-Side Forgery Request can be activated unmarshalling with XStream to access data streams from an arbitrary URL referencing a resource in an intranet or the local host: https://nvd.nist.gov/vuln/detail/CVE-2021-21342
* A Server-Side Forgery Request can be activated unmarshalling with XStream to access data streams from an arbitrary URL referencing a resource in an intranet or the local host: https://nvd.nist.gov/vuln/detail/CVE-2021-21349
* XStream is vulnerable to an Arbitrary Code Execution attack: https://nvd.nist.gov/vuln/detail/CVE-2021-21351
* XStream is vulnerable to an Arbitrary Code Execution attack: https://nvd.nist.gov/vuln/detail/CVE-2021-21350
* XStream is vulnerable to an Arbitrary Code Execution attack: https://nvd.nist.gov/vuln/detail/CVE-2021-21347
* XStream is vulnerable to an Arbitrary Code Execution attack: https://nvd.nist.gov/vuln/detail/CVE-2021-21346
* XStream is vulnerable to an Arbitrary Code Execution attack: https://nvd.nist.gov/vuln/detail/CVE-2021-21344
* XStream is vulnerable to an Arbitrary File Deletion on the local host when unmarshalling as long as the executing process has sufficient rights: https://nvd.nist.gov/vuln/detail/CVE-2021-21343
* XStream can cause a Denial of Service: https://nvd.nist.gov/vuln/detail/CVE-2021-21341
* XStream is vulnerable to an attack using Regular Expression for a Denial of Service (ReDos): https://nvd.nist.gov/vuln/detail/CVE-2021-21348

The new Drools version splits the package and requires to
add drools-mvel as a new dependency.

--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 
   <properties>
     <antlr4.version>4.7.2</antlr4.version>
-    <drools.version>7.0.0.Final</drools.version>
+    <drools.version>7.53.0.Final</drools.version>
     <rmb.version>31.1.0</rmb.version>
     <vertx.version>3.9.1</vertx.version>
     <log4j2.version>2.13.3</log4j2.version>
@@ -126,15 +126,10 @@
       <artifactId>drools-compiler</artifactId>
       <version>${drools.version}</version>
     </dependency>
-    <!--
-    Remove xstream dependency after drools has upgraded its
-    xstream dependency to >= 1.4.15:
-    https://x-stream.github.io/CVE-2020-26259.html
-    -->
     <dependency>
-      <groupId>com.thoughtworks.xstream</groupId>
-      <artifactId>xstream</artifactId>
-      <version>1.4.15</version>
+      <groupId>org.drools</groupId>
+      <artifactId>drools-mvel</artifactId>
+      <version>${drools.version}</version>
     </dependency>
     <dependency>
       <groupId>org.antlr</groupId>
